--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Sign up</a>
+                    <a href="#">Sign Up</a>
                 </li>
                 <li>
                     <a href="#">Gallery</a>
@@ -29,13 +29,12 @@
                 </li>
             </ul>
         </nav>
-
     </header>
-    <section>
+    <section id="hero-outer">
         <div id="hero-image"></div>
     </section>
     <section>
-        Club ethos
+        Club Ethos
     </section>
     <section>
         Running locations, distances and times
@@ -43,7 +42,6 @@
     <footer>
         social links here
     </footer>
-
 </body>
 
 </html>
