--- a/index.html
+++ b/index.html
@@ -111,7 +111,27 @@
         </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target:"_blank" rel="noopener"
+                aria-label="Visit our facebook page (opens in new tab)"><i class="fab fa-facebook"></i></a>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target:"_blank" rel="noopener"
+                aria-label="Visit our twitter page (opens in new tab)"><i class="fab fa-twitter"></i></a>
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target:"_blank" rel="noopener"
+                aria-label="Visit our youtube page (opens in new tab)"><i class="fab fa-youtube"></i></a>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target:"_blank" rel="noopener"
+                aria-label="Visit our instagram page (opens in new tab)"><i class="fab fa-instagram"></i></i></a>
+                </a>
+            </li>
     </footer>
 
     <!-- font awesome script-->
